hphp/hack/test/typecheck/tconst/access_expand_error_1.php.exp
File "access_expand_error_1.php", line 5, characters 10-21:
Error while expanding the type constant C::TC::ERROR: (Typing[4062])
File "access_expand_error_1.php", line 5, characters 17-21:
You are trying to access the member ERROR but this is not an object.
File "access_expand_error_1.php", line 4, characters 19-21:
This is an int (resulting from expanding the type constant C::TC)
